--- a/.env
+++ b/.env
@@ -16,7 +16,8 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=0ff469eb3927452047e72b3e39604aff
+APP_DEBUG=1
 ###< symfony/framework-bundle ###
 
 ###> symfony/routing ###
