--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/runtime": "7.3.*",
         "symfony/security-bundle": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
-        "symfony/yaml": "7.3.*"
+        "symfony/yaml": "7.3.*",
+        "twig/twig": "^3.22"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.64"
