--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,8 +30,8 @@ security:
 
     # Easy way to control access for large sections of your siteS
     # Note: Only the *first* access control that matches will be used
-    access_control:
-         - { path: ^/dashboard, roles: [ROLE_USER, ROLE_ADMIN] }
+    #access_control:
+        # - { path: ^/dashboard, roles: [ROLE_USER, ROLE_ADMIN] }
         # - { path: ^/dashboard, roles: ROLE_USER }
 
 when@test:
